# mongo-upload

./: install.sh  pyproject.toml  readme.md
mongo_upload/: auth.py  cli.py  uploader.py
